--- a/.github/workflows/scheduled-generated.yml
+++ b/.github/workflows/scheduled-generated.yml
@@ -11,15 +11,10 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      # - name: Setup Node.js
-      #   uses: actions/setup-node@v4
-      #   with:
-      #     node-version: 22.x
-      #     cache: "npm"
-      #- name: Install dependencies
-      #  run: npm ci
       - name: Generate Terraform Resource Definitions
         run: node ./tools/generate-terraform.js resource-definitions
+      - name: Format Terraform Resource Definitions
+        run: terraform fmt -recursive resource-definitions/
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v6
         with:
