--- a/resource-definitions/terraform-driver/co-provision/aws-policy-co-provision.yaml
+++ b/resource-definitions/terraform-driver/co-provision/aws-policy-co-provision.yaml
@@ -3,6 +3,7 @@ kind: Definition
 metadata:
   id: aws-policy-co-provision
 entity:
+  name: aws-policy-co-provision
   type: aws-policy
   driver_type: humanitec/terraform
   # Use the credentials injected via the driver_account to set variables as expected by your Terraform code
@@ -17,7 +18,7 @@ entity:
         variables:
           ACCESS_KEY_ID: AccessKeyId
           ACCESS_KEY_VALUE: SecretAccessKey
-      script: |-
+      script: |
         # This provider block is using the Terraform variables
         # set through the credentials_config.
         # Variable declarations omitted for brevity.
@@ -47,4 +48,4 @@ entity:
               var.BUCKET_ARN,
             ]
           }
-}
+        }
