Renaming "dynamic" to "temporary" credentials throughout

--- a/resource-definitions/k8s-cluster-gke/agent/gke-agent.yaml
+++ b/resource-definitions/k8s-cluster-gke/agent/gke-agent.yaml
@@ -1,5 +1,5 @@
 # GKE private cluster. It is to be accessed via the Humanitec Agent
-# It is using a Cloud Account with dynamic credentials
+# It is using a Cloud Account with temporary credentials
 apiVersion: entity.humanitec.io/v1b1
 kind: Definition
 metadata:
@@ -8,7 +8,7 @@ entity:
   name: gke-agent
   type: k8s-cluster
   # The driver_account is referring to a Cloud Account configured in your Organization
-  driver_account: gcp-dynamic-creds
+  driver_account: gcp-temporary-creds
   driver_type: humanitec/k8s-cluster-gke
   driver_inputs:
     secrets:
