--- a/resource-definitions/k8s-cluster-aks/credentials/aks-temporary-credentials.yaml
+++ b/resource-definitions/k8s-cluster-aks/credentials/aks-temporary-credentials.yaml
@@ -1,14 +1,14 @@
-# Connect to an AKS cluster using dynamic credentials defined via a Cloud Account
+# Connect to an AKS cluster using temporary credentials defined via a Cloud Account
 apiVersion: entity.humanitec.io/v1b1
 kind: Definition
 metadata:
-  id: aks-dynamic-credentials
+  id: aks-temporary-credentials
 entity:
-  name: aks-dynamic-credentials
+  name: aks-temporary-credentials
   type: k8s-cluster
   # The driver_account references a Cloud Account of type "azure-identity"
   # which needs to be configured for your Organization.
-  driver_account: azure-dynamic-creds
+  driver_account: azure-temporary-creds
   driver_type: humanitec/k8s-cluster-aks
   driver_inputs:
     values:
