--- a/score/affinity/humanitec.score.yaml
+++ b/score/affinity/humanitec.score.yaml
@@ -1,13 +1,14 @@
 apiVersion: humanitec.org/v1b1
 
 spec:
-  affinity:
-    nodeAffinity:
-      preferredDuringSchedulingIgnoredDuringExecution:
-      - weight: 1
-        preference:
-          matchExpressions:
-          - key: disktype
-            operator: In
-            values:
-            - ssd
+  pod:
+    affinity:
+      nodeAffinity:
+        preferredDuringSchedulingIgnoredDuringExecution:
+        - weight: 1
+          preference:
+            matchExpressions:
+            - key: disktype
+              operator: In
+              values:
+              - ssd
