--- a/score/service/score.yaml
+++ b/score/service/score.yaml
@@ -4,7 +4,8 @@ metadata:
 
 containers:
   demo:
-    image: registry/my-image:1.0.0
+    #image: registry/my-image:1.0.0
+    image: nginx
 service:
   ports:
     www:
