--- a/score/cronjobs/humanitec.score.yaml
+++ b/score/cronjobs/humanitec.score.yaml
@@ -1,7 +1,9 @@
 apiVersion: humanitec.org/v1b1
+# Select the "default-cronjob" built-in Workload Profile
 profile: humanitec/default-cronjob
 
 spec:
+  # Define the CronJob schedules
   schedules:
     6-hour-run:
       containers:
@@ -10,3 +12,32 @@ spec:
             - "--hours"
             - "6"
       schedule: "15 1,7,13,19 * * *"
+  cronjob:
+    # Set annotations and labels in the CronJob object metadata
+    annotations:
+      cronjobannotationkey: cronjobannotationvalue
+    labels:
+      cronjoblabelkey: cronjoblabelvalue
+    # Set properties of the CronJobSpec, e.g.:
+    timeZone: Africa/Lagos
+    concurrencyPolicy: Forbid
+  job:
+    # Set annotations and labels in the Job object metadata for the Jobs created out of the CronJob
+    annotations:
+      jobannotationkey: jobannotationvalue
+    labels:
+      joblabelkey: joblabelvalue
+    # Set properties of the JobSpec, e.g.:
+    activeDeadlineSeconds: 30
+    ttlSecondsAfterFinished: 3600
+  pod:
+    # Set Pod annotations and labels in Pod metadata
+    annotations:
+      podannotationkey: podannotationvalue
+    labels:
+      podlabelkey: podlabelvalue
+    # Set properties of the PodSpec, e.g.:
+    nodeSelector:
+      topology.kubernetes.io/region: europe-west3
+    os:
+      name: linux
