--- a/resource-definitions/template-driver/labels/custom-workload-with-dynamic-labels.yaml
+++ b/resource-definitions/template-driver/labels/custom-workload-with-dynamic-labels.yaml
@@ -11,7 +11,6 @@ entity:
   driver_inputs:
     values:
       templates:
-        # Remove the /spec/service/labels part if there is no "service" in your Score file.
         outputs: |
           update:
             - op: add
@@ -22,6 +21,7 @@ entity:
                 {{- end }}
                 env_id: ${context.env.id}
                 cost_center_id: ${resources['config.default#app-config'].outputs.cost_center_id}
+            {{- if .resource.spec.service }}
             - op: add
               path: /spec/service/labels
               value:
@@ -30,6 +30,7 @@ entity:
                 {{- end }}
                 env_id: ${context.env.id}
                 cost_center_id: ${resources['config.default#app-config'].outputs.cost_center_id}
+            {{- end }}
   # Set matching criteria as required
   criteria:
     - {}
