--- a/resource-definitions/wildcard-dns/dns-template.yaml
+++ b/resource-definitions/wildcard-dns/dns-template.yaml
@@ -8,5 +8,10 @@ entity:
   driver_type: humanitec/dns-wildcard
   driver_inputs:
     values:
-      domain: "my-test-domain.com"
-      template: "preview-${context.app.id}-${context.env.id}"
+      domain: "my-domain.com"
+      template: "{{ index (splitList "." "${context.res.id}") 1 }}-${context.env.id}-${context.app.id}"
+  provision:
+    ingress:
+      is_dependent: false
+  criteria:
+    - {}
