--- a/resource-definitions/wildcard-dns/dns-template.yaml
+++ b/resource-definitions/wildcard-dns/dns-template.yaml
@@ -9,7 +9,7 @@ entity:
   driver_inputs:
     values:
       domain: "my-domain.com"
-      template: "{{ index (splitList "." "${context.res.id}") 1 }}-${context.env.id}-${context.app.id}"
+      template: '{{ index (splitList "." "${context.res.id}") 1 }}-${context.env.id}-${context.app.id}'
   provision:
     ingress:
       is_dependent: false
